# podcast-transcriber

./: .env.example  .gitignore  Dockerfile  README.md  The Easy Way to Fix Boring UIs_no_timestamps.txt  download_youtube_transcripts.py  nixpacks.toml  pyproject.toml  remove_timestamps.py  requirements.txt  transcribe.py  transcription.txt  transcription_no_timestamps.txt  vtt_to_text.py
.claude/: settings.local.json
app/: __init__.py  article_service.py  config.py  content_detector.py  main.py  notion_client.py  podcast_service.py  youtube_service.py
